# Lectures

./: .devcontainer.json
Lecture10/: Lecture10.cabal  Lecture10.hs
Lecture11/: Proofs.hs
Lecture2/: Lecture2.cabal  Lecture2.hs
Lecture3/: Lecture3.cabal
Lecture4/: Lecture4.cabal  Lecture4.hs
Lecture6/: Lecture6.cabal  Lecture6Deep.hs  Lecture6Shallow.hs
Lecture7/: Lecture7.cabal  Lecture7.hs
Lecture8/: Lecture8.cabal  Lecture8.hs  Lecture8A.hs  Lecture8B.hs  Lecture8C.hs  Lecture8Common.hs
Lecture9/: Lecture9.cabal  Lecture9.hs
Project/week1/: Interpreter.hs  Main.hs
Solutions/PS1/: Problems1.hs
Solutions/PS10/: Problems10.hs  Tests.hs
Solutions/PS2/: Problems2.hs  Tests.hs
Solutions/PS3/: Problems3.hs  Tests.hs
Solutions/PS4/: Problems4.hs  Tests.hs
Solutions/PS5/: Problems5.cabal  Problems5.hs  Tests.hs
Solutions/PS6/: Problems6.hs  Tests.hs
Solutions/PS7/: Problems7.cabal  Problems7.hs  Tests.hs
Solutions/PS8/: Problems8.cabal  Problems8.hs  Tests.hs
Solutions/PS9/: Problems9.cabal  Problems9.hs  Tests.hs
