name:                Lecture2
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture2.hs
  ghc-options:         -main-is Lecture2
  hs-Source-Dirs:      ./
  build-depends:       HUnit, base
  default-language:    Haskell2010
