name:                Lecture3
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture3.hs
  ghc-options:         -main-is Lecture3
  hs-Source-Dirs:      ./
  other-modules:       Lecture3
  build-depends:       HUnit, base
  default-language:    Haskell2010
