name:                Lecture6
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture6DeepFull.hs
  ghc-options:         -main-is Lecture6Full
  hs-Source-Dirs:      ./
  other-modules:       Lecture6ShallowFull
  build-depends:       HUnit, base
  default-language:    Haskell2010
