name:                Lecture7
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture7.hs
  ghc-options:         -main-is Lecture7
  hs-Source-Dirs:      ./
  other-modules:       Lecture7
  build-depends:       HUnit, base
  default-language:    Haskell2010
