name:                Lecture8
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture8.hs
  ghc-options:         -main-is Lecture8Full
  hs-Source-Dirs:      ./
  other-modules:       Lecture8A, Lecture8B, Lecture8C, Lecture8Common, Lecture8
  build-depends:       HUnit, base
  default-language:    Haskell2010
