name:                Lecture9
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture9.hs
  ghc-options:         -main-is Lecture9
  hs-Source-Dirs:      ./
  build-depends:       HUnit, base
  default-language:    Haskell2010
